--- a/css/card.css
+++ b/css/card.css
@@ -101,16 +101,7 @@ h1 {
     padding-top: 5px;
     margin-left: 10px;
     float: left;
-    height: 20px;
-    width: 20px;
     border-radius: 50%;
-}
-
-h2 {
-    padding-top: 8px;
-    margin-right: 6px;
-    text-align: right;
-    font-size: 0.8rem;
 }
 
 .separator {
@@ -118,35 +109,8 @@ h2 {
     border: 1px solid #C3C3C3;
 }
 
-p {
-    text-align: justify;
-    padding-top: 10px;
-    font-size: 0.95rem;
-    line-height: 150%;
-    color: #4B4B4B;
-}
 
-
-/* DATE of release */
-
-h5 {
-    position: absolute;
-    left: 30px;
-    bottom: -120px;
-    font-size: 6rem;
-    color: #C3C3C3;
-}
-
-h6 {
-    position: absolute;
-    left: 30px;
-    bottom: -55px;
-    font-size: 2rem;
-    color: #C3C3C3;
-}
-
-
-/* Those futur buttons */
+/* Those future buttons */
 
 ul {
     margin-left: 250px;
