--- a/css/card.css
+++ b/css/card.css
@@ -132,7 +132,7 @@ li {
     bottom: -40px;
     box-sizing: border-box;
     padding-top: 18px;
-    background-color: #1875D0;
+    background-color: #ecc30d;
     width: 80px;
     height: 80px;
     color: white;
