--- a/css/card.css
+++ b/css/card.css
@@ -81,7 +81,7 @@ img.left {
 
 /* Floating action button */
 
-.fab {
+.cardbuttondeets {
     position: absolute;
     right: 50px;
     bottom: -40px;
