--- a/css/card.css
+++ b/css/card.css
@@ -82,18 +82,33 @@ img.left {
 /* Floating action button */
 
 .cardbuttondeets {
-    position: absolute;
-    right: 50px;
-    bottom: -40px;
-    box-sizing: border-box;
-    padding-top: 18px;
     background-color: #ecc30d;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    font-size: 20pt;
+    height: 60px;
     color: white;
     text-align: center;
     border-radius: 50%;
-    -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
+    border-color: rgba(0, 0, 0, 0.00) !important;
+    -webkit-box-shadow: 6px 6px 6px -2px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 6px 6px 6px -2px rgba(0, 0, 0, 0.4);
+    box-shadow: 6px 6px 6px -2px rgba(0, 0, 0, 0.4);
+    -webkit-transform-origin: center center;
+    -moz-transform-origin: center center;
+    -ms-transform-origin: center center;
+    -o-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-transform: rotate(0) translateX(0) translateY(0);
+    -moz-transform: rotate(0) translateX(0) translateY(0);
+    -ms-transform: rotate(0) translateX(0) translateY(0);
+    -o-transform: rotate(0) translateX(0) translateY(0);
+    transform: rotate(0) translateX(0) translateY(0);
+    will-change: transform;
+    transition: 0.25s all ease-in-out;
+}
+
+.cardbuttondeets:hover {
+    -webkit-box-shadow: 8px 8px 6px -2px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 8px 8px 6px -2px rgba(0, 0, 0, 0.4);
+    box-shadow: 8px 8px 6px -2px rgba(0, 0, 0, 0.4);
 }
