--- a/css/card.css
+++ b/css/card.css
@@ -61,15 +61,14 @@ img.left {
 
 .author {
     background-color: #9ECAFF;
-    height: 30px;
+    height: 40px;
     width: 110px;
     border-radius: 20px;
 }
 
 .author>img {
-    padding-top: 5px;
-    margin-left: 10px;
     float: left;
+    margin: 7%;
     border-radius: 50%;
 }
 
