color change on fab

--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: #4285F4;
+    background: #ffac11;
     float: right;
     will-change: transform;
     transition: 0.25s all ease-in-out;
